# emiuet

./: .gitattribute  .gitignore  CMakeLists.txt  README.md  emiuet.code-workspace
.github/: copilot-instructions.md
docs/: decisions.md  design-notes.md  pinout-v3.md
firmware/: .gitignore  CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
firmware/main/: CMakeLists.txt  Kconfig.projbuild  adc_manager.c  adc_manager.h  app_main.c  board_pins.c  board_pins.h  emiuet_logo.xbm  idf_component.yml  led_status.c  led_status.h  matrix_midi_bridge.c  matrix_midi_bridge.h  matrix_scan.c  matrix_scan.h  midi_mpe.c  midi_mpe.h  midi_out.c  midi_out.h  midi_out_ble.c  midi_out_uart_trs.c  midi_out_usb.c  oled_demo.c  oled_demo.h  slider.c  slider.h  slider_task.c  ui_led_status.c  ui_oled.c
hardware/bom/: Emiuet_RevA_BOM.xlsx
hardware/kicad/: Emiuet.kicad_pro  Emiuet.kicad_sch  fp-lib-table  sym-lib-table
hardware/kicad/Eminuet Library.pretty/: BQ24074_QFN-16_3x3mm_withThermalVia_noSilk.kicad_mod  D_SOD-123F_noSilk.kicad_mod  ESP32-S2-MINI-1_thermalVia_noSilk.kicad_mod  Fuse_1812_4532Metric_noSilk.kicad_mod  LED_D5.0mm THT Turn_noSilk.kicad_mod  L_0805_2012Metric_noSilk.kicad_mod  L_APV_ANR5045_noSilk.kicad_mod  R_1206_3216Metric_noSilk.kicad_mod  SOT-23_noSilk.kicad_mod  SOT-363_SC-70-6_noSilk.kicad_mod  SOT-563_noSilk.kicad_mod  Texas_DRT-3_noSilk.kicad_mod  Texas_X2QFN-12_1.6x1.6mm_P0.4mm_noSilk.kicad_mod  USB_C_Receptacle_G-Switch_GT-USB-7010ASV_noSilk.kicad_mod
hardware/kicad/Emiuet_plate/: Emiuet_plate.kicad_pcb  (+2 more)
main/: CMakeLists.txt  led_status.c  oled_demo.c
(+28 files in other folders)
